<?xml version="1.0" encoding="utf-8"?>
<layout   xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="com.dream.architecturecomponents.ui.movies.create.CreateMovieViewModel"/>
        <import type="com.dream.architecturecomponents.utils.Utils"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
                style="@style/Toolbar"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/create_movie"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/item_margin">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/titleLayout"
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/titleEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@={viewModel.title}"
                            tools:text="Avengers"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/overviewLayout"
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleLayout"
                        android:hint="@string/overview">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/overviewEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.overview}"
                            tools:text="@string/avengers_overview"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/releaseDateLayout"
                        style="@style/TextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/overviewLayout"
                        android:hint="@string/releaseDate">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/releaseDateEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusableInTouchMode="false"
                            android:cursorVisible="false"
                            android:text="@{Utils.dateToStringCapitalize(viewModel.releaseDate)}"
                            tools:text="12/04/2012"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                        style="@style/Switch"
                        android:id="@+id/isForAdultsOnlySwitch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/item_margin"
                        android:layout_marginBottom="@dimen/item_margin"
                        android:text="@string/isForAdultsOnly"
                        android:checked="@={viewModel.isForAdultsOnly}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/releaseDateLayout"
                        app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>