<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            style="@style/Toolbar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_margin">

            <TextView
                    style="@style/Title"
                    android:id="@+id/overviewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    style="@style/Text"
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="L'histoire horrible, mais vraie, d'Ed et Lorraine Warren, enquêteurs paranormaux réputés dans le monde entier."
                    android:layout_marginTop="@dimen/item_margin"
                    app:layout_constraintTop_toBottomOf="@id/overviewTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    style="@style/Title"
                    android:id="@+id/releaseDateTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/releaseDate"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/item_margin"
                    app:layout_constraintTop_toBottomOf="@id/overview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    style="@style/Text"
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="12/04/2012"
                    android:layout_marginTop="@dimen/item_margin"
                    app:layout_constraintTop_toBottomOf="@id/releaseDateTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    style="@style/Title"
                    android:id="@+id/isForAdultsOnlyTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isForAdultsOnly"
                    android:textSize="18sp"
                    android:layout_marginTop="@dimen/item_margin"
                    app:layout_constraintTop_toBottomOf="@id/releaseDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    style="@style/Text"
                    android:id="@+id/isForAdultsOnly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Oui"
                    android:layout_marginTop="@dimen/item_margin"
                    app:layout_constraintTop_toBottomOf="@id/isForAdultsOnlyTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>